sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i <- 1 to lgr - 2) {
    for (j <- i + 1 to lgr - 2) {
      if (getValeur(j) < getValeur(j+1)) {
        echange(j,j+1)
      }
    }
  }
}